# vaanidub

./: .env.example  .gitignore  Dockerfile  README.md  SETUP.md  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: ci.yml
configs/: default.yaml  models.yaml
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/.vercel/: project.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AudioPlayer.tsx  FileUploader.tsx  JobProgress.tsx  LanguageSelector.tsx
frontend/src/lib/: api.ts  audio-trimmer.ts  store.ts
scripts/: download_models.py
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_api.py  test_cli.py  test_config.py  test_constants.py  test_db_models.py  test_exceptions.py  test_gpu_manager.py  test_logging_config.py  test_model_manager.py  test_quality.py
tests/unit/pipeline/: test_context.py  test_orchestrator.py  test_s1_ingest.py  test_s2_separate.py  test_s3_diarize.py  test_s4_transcribe.py  test_s5_prosody.py  test_s6_translate.py  test_s7_synthesize.py  test_s8_mixdown.py
tests/unit/providers/: test_indictrans2_codes.py  test_provider_bases.py
vaanidub/: __init__.py  config.py  constants.py  demo_pipeline.py  exceptions.py  logging_config.py
vaanidub/api/: app.py  deps.py  schemas.py
vaanidub/api/routes/: health.py  jobs.py  languages.py
vaanidub/cli/: main.py
vaanidub/db/: models.py  session.py
vaanidub/db/migrations/: env.py
vaanidub/db/migrations/versions/: 001_initial_schema.py
vaanidub/models/: gpu_manager.py  model_manager.py
vaanidub/pipeline/: base.py  context.py  orchestrator.py
vaanidub/pipeline/providers/diarization/: __init__.py  pyannote_provider.py
vaanidub/pipeline/providers/separation/: __init__.py  demucs.py
vaanidub/pipeline/providers/stt/: __init__.py  base.py  openai_whisper.py  whisperx_provider.py
vaanidub/pipeline/providers/translation/: __init__.py  base.py  (+2 more)
vaanidub/pipeline/stages/: s1_ingest.py  s2_separate.py  s3_diarize.py  s4_transcribe.py  s5_prosody.py  s6_translate.py  s7_synthesize.py  s8_mixdown.py
vaanidub/quality/: scorer.py  validators.py
vaanidub/worker/: celery_app.py  tasks.py
(+10 files in other folders)
